# Humanoid_Finger_Controller

./: Hand_Moving.ino  README.md  Sending_Data_Demo.ino
motor_test/: CMakeLists.txt
motor_test/include/: can_bus.hpp  motor_control.hpp
motor_test/src/: can_bus.cpp  main.cpp  motor_control.cpp
